--- a/res/config.json
+++ b/res/config.json
@@ -1,66 +1,87 @@
 {
     "WhiteBallSize":0.5,
     "BallsSize":0.5,
-    "Positions":[
+    "BallsProperties":[
         {
             "x":4.5,
-            "y":17.75
+            "y":17.75,
+            "color":"Yellow"
         },
         {
             "x":5.0,
-            "y":17.75
+            "y":17.75,
+            "color":"Red"
+
         },
         {
             "x":5.5,
-            "y":17.75
+            "y":17.75,
+            "color":"Yellow"
         },
         {
             "x":6.0,
-            "y":17.75
+            "y":17.75,
+            "color":"Yellow"
         },
         {
             "x":6.5,
-            "y":17.75
+            "y":17.75,
+            "color":"Red"
         },
         {
             "x":4.75,
-            "y":17.3125
+            "y":17.3125,
+            "color":"Red"
         },
         {
             "x":5.25,
-            "y":17.3125
+            "y":17.3125,
+            "color":"Yellow"
         },
         {
             "x":5.75,
-            "y":17.3125
+            "y":17.3125,
+            "color":"Red"
         },
         {
             "x":6.25,
-            "y":17.3125
+            "y":17.3125,
+            "color":"Yellow"
         },
         {
             "x":5.0,
-            "y":16.875
+            "y":16.875,
+            "color":"Yellow"
         },
         {
             "x":5.5,
-            "y":16.875
+            "y":16.875,
+            "color":"Black"
         },
         {
             "x":6.0,
-            "y":16.875
+            "y":16.875,
+            "color":"Red"
         },
         {
             "x":5.25,
-            "y":16.4375
+            "y":16.4375,
+            "color":"Red"
         },
         {
             "x":5.75,
-            "y":16.4375
+            "y":16.4375,
+            "color":"Yellow"
         },
         {
             "x":5.5,
-            "y":16
+            "y":16,
+            "color":"Red"
+        },
+        {
+            "x":5.5,
+            "y":5.5,
+            "color":"White"
         }
 
 ]
